Bug 1126613 - RTL, SHB, Utility tray overlapping SHB

--- a/apps/system/style/utility_tray/utility_tray.css
+++ b/apps/system/style/utility_tray/utility_tray.css
@@ -97,6 +97,7 @@
 @media (orientation: landscape) {
   #screen.software-button-enabled #utility-tray {
     width: calc(100% - var(--software-home-button-height));
+    left: 0;
   }
 }
 
